--- a/src/main/resources/static/partial/common/layout/prgmLayout.html
+++ b/src/main/resources/static/partial/common/layout/prgmLayout.html
@@ -1,13 +1,17 @@
-<div ui-view="navigation"></div>
-<div id="container">
-    <div class="location">
-        <dl>
-            <dt>현위치</dt>
-            <dd program-path>
-                컨테이너 운송 <span>&gt;</span> 운송관리 <span>&gt;</span> <strong>운송오더현화에[cttrs 1020]</strong>
-            </dd>
-        </dl>
-        <input type="button" name="" class="btn_reset" value="초기화" title="" />
+<div class="main">
+    <div class="wrap">
+        <div ui-view="navigation"></div>
+        <div id="container">
+            <div class="location">
+                <dl>
+                    <dt>현위치</dt>
+                    <dd program-path>
+                        컨테이너 운송 <span>&gt;</span> 운송관리 <span>&gt;</span> <strong>운송오더현화에[cttrs 1020]</strong>
+                    </dd>
+                </dl>
+                <input type="button" name="" class="btn_reset" value="초기화" title="" />
+            </div>
+            <div ui-view="application"></div>
+        </div>
     </div>
-    <div ui-view="application"></div>
 </div>
