--- a/src/main/resources/static/partial/common/popup/SearchPopup.html
+++ b/src/main/resources/static/partial/common/popup/SearchPopup.html
@@ -2,32 +2,37 @@
 (function(){
     'use strict';
     angular.module("programModule")
-    .controller("PopupController", ["$scope","RESTfulService", "$resource", "$q",function controller($scope,RESTfulService,$resource, $q){
+    .controller("PopupController", ["$scope","RESTfulService", "$resource", "$q","KendoDataHelper", function controller($scope,RESTfulService,$resource, $q, KendoDataHelper){
         var popup = this;
-        popup.grid1Data = [];
         var parent = $scope.$parent;
+        var Message = RESTfulService("api/app/resource/:msgPk");   
+        console.log($scope.item);
+        popup.gridMstData = KendoDataHelper.toKendoData({
+            data: []},"data");
         popup.search = function(){
-            var list1 = RESTfulService.getList({
-                area: "app",
-                service: "messages",
-                inquiry: "getMessageListByParam",
-                q: "msgGrpCd=MSG",
-                offset: 0,
-                limit: 100}).$promise;
-            var param = "";
-            
-            list1.then(function(data){
-                popup.grid1Data = angular.fromJson(angular.toJson(data));
-                return RESTfulService.getList({
-                    area: "app",
-                    service: "messages",
-                    inquiry: "getMessageLocaleListByParam",
-                    msgGrpCd: "MSG",
-                    msgCd: data[0].MSG_CD}).$promise;
-            }, function(error) {
-            })
-        };
-        
+            /* if(confirm("조회 하시겠습니까?"))
+            alert("search"); */
+            var list1 = Message.query({
+                inquiry: "GetTestByParam", 
+                msgNM: $scope.item, 
+                offset: 0, limit: 100
+                }).$promise;
+            var param = ""
+            list1.then(
+                function(data){
+                    popup.gridMstData.data(angular.fromJson(angular.toJson(data)));
+                },
+                function(error){
+                    
+                }
+            );
+    };
+    
+        popup.rowDblclick = function(rowData){
+           console.log(rowData);
+           parent.$windowInstance.close(rowData);
+        }
+       
         popup.confirm = function(){
             parent.$windowInstance.close(true);
         };
@@ -35,22 +40,27 @@
         popup.cancel = function(){
             parent.$windowInstance.close(false);
         };
+        popup.rowDblClick = function( row) {
+            alert(JSON.stringify(row.entity)); 
+          };
+          
         console.log($scope);
     }]);
 })();
+
 </script>
 <div data-dynamic-controller="PopupController as pop">
-    <div class="box_cont">
+    <div>
         <h3>거래처명 코드검색</h3>
-        <div class="searchbox">
+        <div>
         <label for="search">코드/평점</label> <input type = "text" id="search" value={{item}}>
         <button kendo-button type="button" ng-click="pop.search()">검색</button>
         </div>
     </div>
-    <div class="grid">
-        <kendo-grid id="resultgrid" k-scope-field="pop.grid" comgrid k-option="comgrid.options" k-data-source="pop.grid1Data"></kendo-grid>
+    <div>
+        <kendo-grid id="resultgrid" k-scope-field="pop.grid" com_grid k-options="comgrid.options" k-data-source="pop.gridMstData" kendo-grid-row-dbl-click="pop.rowDblclick(rowData)"></kendo-grid>
     </div>
-    
+    data : {{data}}
     <button kendo-button type="button" ng-click="pop.confirm()">Confirm</button>
     <button kendo-button type="button" ng-click="pop.cancel()">Cancel</button>
     
